L4, Form Validation, Validating Template-Driven Forms

--- a/src/app/create-post/create-post.component.html
+++ b/src/app/create-post/create-post.component.html
@@ -1,8 +1,9 @@
-<form (ngSubmit)="submitForm()">
+<form #form="ngForm" (ngSubmit)="submitForm()">
   <h1>Create a Post</h1>
-  <input type="text" name="title" [(ngModel)]="title" placeholder="Enter post title">
+  <input type="text" name="title" required minlength="8" maxlength="32" [(ngModel)]="title"
+    placeholder="Enter post title">
   <br>
-  <textarea type="text" name="body" [(ngModel)]="body" placeholder="Enter post body"></textarea>
+  <textarea type="text" name="body" required minlength="16" [(ngModel)]="body" placeholder="Enter post body"></textarea>
   <br>
-  <input type="submit" value="Submit" class="btn btn-primary">
+  <input type="submit" [disabled]="form.invalid" value="Submit" class="btn btn-primary">
 </form>
